# wehuddling_backend

./: .gitignore  README.md  pyproject.toml
app/config/: settings.py
app/info/: models.py  serializers.py  views.py
